kustomize/vault/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: vault 
spec: {}
status: {}
