kustomize/vault/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-dashboard
  namespace: vault
spec:
  ingressClassName: traefik
  rules:
  - host: vault.tpi2.local
    http:
      paths:
      - backend:
          service:
            name: vault-ui
            port:
              number: 8200
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
